--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "agno>=1.7.4",
     "bs4>=0.0.2",
+    "google-genai>=1.26.0",
     "python-dotenv>=1.1.1",
     "qdrant-client>=1.14.3",
 ]
